# from-jupyter-to-production-ml-platform

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  sample.env
configs/: create_subsets.yaml  label-view.html
data/prediction/: demo-request.json
data/tasks/: label_task_0.json  label_task_1.json  label_task_10.json  label_task_100.json  label_task_101.json  label_task_102.json  label_task_103.json  label_task_104.json  label_task_105.json  label_task_106.json  label_task_107.json  label_task_108.json  label_task_109.json  label_task_11.json  label_task_110.json  label_task_111.json  label_task_112.json  label_task_113.json  label_task_114.json  label_task_115.json  label_task_116.json  label_task_117.json  label_task_118.json  label_task_119.json  label_task_12.json  label_task_120.json  label_task_121.json  label_task_122.json  label_task_123.json  label_task_124.json  label_task_125.json  label_task_126.json  label_task_127.json  label_task_128.json  label_task_129.json  label_task_13.json  label_task_130.json  label_task_131.json  label_task_132.json  label_task_133.json  (+851 more)
docker/scripts/: init-db.sh  init-minio.sh  init-postgres.sql
src/titanicsurvivors/: data.py  models.py  settings.py
src/titanicsurvivors/config/: docker.py
src/titanicsurvivors/feature_repo/: feature_store.yaml  features.py
src/titanicsurvivors/pipelines/: feature_engineering.py  prepare_raw_data.py  train_xgb_classifier.py
src/titanicsurvivors/steps/: analysis.py  data_cleaning.py  database.py  datacleaning.py  (+8 more)
(+20 files in other folders)
